# black-angus-main

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
blackangus/: config.py  core.py  main.py
blackangus/apps/: base.py
blackangus/apps/alarm/: periodic.py  register.py
blackangus/apps/emoticon/: command.py  fetcher.py
blackangus/apps/emoticon/line/: command.py
blackangus/apps/miscs/: direction.py  random.py  translation.py  weather.py
blackangus/apps/search/: base.py  image.py  youtube.py
blackangus/apps/subscription/: periodic.py  register.py
blackangus/migration/: v1_to_v2.py
blackangus/models/: alarm.py  naver_map.py  search.py  subscribe.py
blackangus/models/emoticon/: base_response.py  linecon.py  linecon_response.py  main.py
blackangus/scrapper/: base.py  google_images.py  youtube.py
blackangus/services/emoticon/: __init__.py  linecon.py  main.py
blackangus/utils/: crontab.py  rss_feed.py  weather_client.py
blackangus/utils/network/: google_geocoding_client.py  naver_map_pathfinder_client.py  papago_client.py  weather_client.py
