[tool.black]
line-length = 88
skip_string_normalization = true

[tool.poetry]
name = "blackangus"
version = "0.0.1"
description = "All New Black Angus Bot, Multi-Purpose Discord Bot"
authors = ["Haze Lee <hazelee@realignist.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
py-cord = {extras = ["speed"], version = "^1.7.3"}
httpx = "^0.23.0"
click = "^8.1.3"
boto3 = "^1.24.26"
pandas = "^1.4.3"
aiocron = "^1.8"
pendulum = "^2.1.2"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
toml = "^0.10.2"
orjson = "^3.7.7"
beanie = "^1.11.6"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
aioresponses = "^0.7.3"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
pre-commit = "^2.19.0"
black = "^22.6.0"
time-machine = "^2.7.1"
types-orjson = "^3.6.1"
types-toml = "^0.10.7"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "blackangus.main:blackangus"
